--- a/committee.html
+++ b/committee.html
@@ -191,7 +191,7 @@ Rita Zhgeib, Canadian University Dubai<br>
 Soror Sahri, Université Paris Descartes, France<br>
 Farah Benamara, IRIT, France<br>    
 
-<h5><strong>Program Committee:</strong></h5>
+      <p class="text"><b>Program Committee</b>
         <ul>
             <li>Fernando Ortiz Rodriguez (Universidad Autonoma de Tamaulipas, Mexico)</li>
             <li>Sanju Tiwari (Universidad Autonoma de Tamaulipas, Mexico)</li>
