--- a/cfp.html
+++ b/cfp.html
@@ -225,7 +225,18 @@ color: white;
     
     <br>
     
+<div class="container-fluid">
+        <h2><strong>Submissions and Proceedings</strong></h2>
+        <p class="text"><strong>AI4S 2023</strong> invites you to submit high-quality unpublished research papers on the topics of the conference. 
+            The submissions cannot be under review or acceptance for publication in a journal or another conference.
+             The papers will be reviewed by at least three independent reviewers and submitted for plagiarism detection check.</p>
+        <p>The submissions must be written in English using the Springer style (LNCS/CCIS one-column page format). 
+            We receive full papers (12-15 pages) and short papers (6-8 pages) and may be submitted in PDF via the Easychair system below:</p>
+        <p>All proposals should be submitted through the <a href="https://easychair.org/conferences/?conf=ai4s2023">Easychair</a> system.</p>
+        <p><strong>“It is planned to publish the proceedings with Springer in their Communications in Computer and Information Science series (CCIS Springer Accepted).”</strong></p>
 
+<br>
+<br>
 
 
 <footer>
