--- a/cfp.html
+++ b/cfp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>AMLDA 2023</title>
+      <title>AI4S 2023</title>
     <style type="text/css">
 .ip{
       margin-left:-10px;
@@ -49,7 +49,7 @@ color: white;
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <title>AMLDA 2023</title>
+  <title>AI4S 2023</title>
 </head>
 <body class="ft" style="background-color: white">
 
@@ -150,7 +150,7 @@ color: white;
 </div>
 <div class="container-fluid">
 
-    <h5 class="title">AI4S 2023</h5>
+    <h5 class="title"> <b>AI4S 2023</b></h5>
         <p class="text">
 
             Call For Papers page data AI is not a silver bullet for all of humanity’s problems.
@@ -182,7 +182,7 @@ color: white;
 <br>
 <br>
 <div class="container-fluid">
-        <h2><strong>Submissions and Proceedings</strong></h2>
+        <h5 class="text><b></b>Submissions and Proceedings</b></strong></h5>
         <p class="text"><strong>AI4S 2023</strong> invites you to submit high-quality unpublished research papers on the topics of the conference. 
             The submissions cannot be under review or acceptance for publication in a journal or another conference.
              The papers will be reviewed by at least three independent reviewers and submitted for plagiarism detection check.</p>
