--- a/cfp.html
+++ b/cfp.html
@@ -153,8 +153,7 @@ color: white;
     <h5 class="title"> <b>AI4S 2023</b></h5>
         <p class="text">
 
-            Call For Papers page data AI is not a silver bullet for all of humanity’s problems.
-            But it has the potential to be a formidable tool in the toolkit. For that to happen. We invite you to submit original research on:
+            AI is not a silver bullet for all of humanity’s problems. But it has the potential to be a formidable tool in the toolkit. For that to happen. We invite you to submit original research on:
 
 </p>
 
