--- a/cfp.html
+++ b/cfp.html
@@ -181,7 +181,7 @@ color: white;
 <br>
 <br>
 <div class="container-fluid">
-        <h5 class="text><b>Submissions and Proceedings</b></strong></h5>
+        <h5 class="text"><b>Submissions and Proceedings</b></h5>
         <p class="text"><strong>AI4S 2023</strong> invites you to submit high-quality unpublished research papers on the topics of the conference. 
             The submissions cannot be under review or acceptance for publication in a journal or another conference.
              The papers will be reviewed by at least three independent reviewers and submitted for plagiarism detection check.</p>
