--- a/cfp.html
+++ b/cfp.html
@@ -181,8 +181,8 @@ color: white;
 <br>
 <br>
 <div class="container-fluid">
-        <h5 class="text"><b>Submissions and Proceedings</b></h5>
-        <p class="text"><strong>AI4S 2023</strong> invites you to submit high-quality unpublished research papers on the topics of the conference. 
+         <h2><strong>Submissions and Proceedings</strong></h2>   
+      <p class="text"><strong>AI4S 2023</strong> invites you to submit high-quality unpublished research papers on the topics of the conference. 
             The submissions cannot be under review or acceptance for publication in a journal or another conference.
              The papers will be reviewed by at least three independent reviewers and submitted for plagiarism detection check.</p>
         <p>The submissions must be written in English using the Springer style (LNCS/CCIS one-column page format). 
