--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ color: white;
   <a href="cfp.html" class="list-group-item list-group-item-action "><span style="color:black;">Call for Papers</span></a>
   <a href="impdates.html" class="list-group-item list-group-item-action "><span style="color:black;">Important Dates</span></a>
   <a href="speakers.html" class="list-group-item list-group-item-action"><span style="color:black;">Keynote Speakers</span></a>
-  <a href="committee.html" class="list-group-item list-group-item-action "><span style="color:black;">Committe</span></a>
+  <a href="committee.html" class="list-group-item list-group-item-action "><span style="color:black;">Committee</span></a>
   <a href="registration.html" class="list-group-item list-group-item-action"><span style="color:black;">Registration</span></a>
 
 <a href="venue.html" class="list-group-item list-group-item-action"><span style="color:black;">Venue</span></a>
