--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ font-size: 32px;
    .con {
          position: relative;
     padding: 165px 0 65px;
-    background-image: url(bg.jpg);
+    background-image: url(bg1.jpg);
     background-size:cover;
     text-shadow: 1px 1px black;
 
