--- a/registration.html
+++ b/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>AMLDA 2023</title>
+      <title>AI4S 2023</title>
     <style type="text/css">
 .ip{
       margin-left:-10px;
@@ -64,7 +64,7 @@ th {
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <title>AMLDA 2023</title>
+  <title>AI4S 2023</title>
 </head>
 <body class="ft" style="background-color: white">
 
@@ -95,7 +95,7 @@ th {
       <a href="cfp.html" class="list-group-item list-group-item-action "><span style="color:black;">Call for Papers</span></a>
       <a href="impdates.html" class="list-group-item list-group-item-action "><span style="color:black;">Important Dates</span></a>
       <a href="speakers.html" class="list-group-item list-group-item-action"><span style="color:black;">Keynote Speakers</span></a>
-      <a href="committee.html" class="list-group-item list-group-item-action "><span style="color:black;">Committe</span></a>
+      <a href="committee.html" class="list-group-item list-group-item-action "><span style="color:black;">Committee</span></a>
       <a href="registration.html" class="list-group-item list-group-item-action active"><span style="color:black;">Registration</span></a>
     
     <a href="venue.html" class="list-group-item list-group-item-action"><span style="color:black;">Venue</span></a>
@@ -116,7 +116,7 @@ th {
       <dt><b>Final Version: </b></dt>
             <dd><b>August 15,2023</b></dd>
             <dt><b>Conference Dates: </b></dt>
-            <dd><b>5th & 5th September 2023</b></dd>
+            <dd><b>4th & 5th September 2023</b></dd>
 </dl>
 </div>
    
