--- a/publication.html
+++ b/publication.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>AMLDA 2023</title>
+      <title>AI4S 2023</title>
     <style type="text/css">
 .ip{
       margin-left:-10px;
@@ -49,7 +49,7 @@ color: white;
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <title>AMLDA 2023</title>
+  <title>AI4S 2023</title>
 </head>
 <body class="ft" style="background-color: white">
 
