--- a/speakers.html
+++ b/speakers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>AMLDA 2023 | Speakers</title>
+      <title>AI4S 2023 | Speakers</title>
     <style type="text/css">
 
         
@@ -56,7 +56,7 @@ img {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
 
-  <title>AMLDA 2023</title>
+  <title>AI4S 2023</title>
 </head>
 <body class="ft" style="background-color: white">
 
