--- a/speakers.html
+++ b/speakers.html
@@ -144,7 +144,7 @@ img {
     <div class="col-sm">
       <div class="card-body">
 
-        <p class="card-text ft">Eleni Mangina, Professor, University College Dublin, Computer Science, Dublin, Ireland</p>
+        <p class="card-text ft"><b>Eleni Mangina</b>, Professor, University College Dublin, Computer Science, Dublin, Ireland</p>
         <p class="card-text ft">Title: - </p>
         <p class="card-text ft">Abstract: TBD</p>
 
@@ -164,7 +164,7 @@ img {
     <div class="col-sm">
       <div class="card-body">
 
-        <p class="card-text ft">David Leslie, Director of Ethics and Responsible Innovation Research at The Alan Turing Institute and Professor of Ethics, Technology and Society, Queen Mary University of London, UK
+        <p class="card-text ft"><b>David Leslie</b>, Director of Ethics and Responsible Innovation Research at The Alan Turing Institute and Professor of Ethics, Technology and Society, Queen Mary University of London, UK
         </p>
         <p class="card-text ft">Title:- </p>
             <p class="card-text ft">Abstract: TBD</p>
@@ -185,9 +185,9 @@ img {
       <div class="col-sm">
         <div class="card-body">
   
-          <p class="card-text ft">Amit Sheth, Founding Director, Artificial Intelligence Institute at University of South Carolina, USA</p>
+          <p class="card-text ft"><b>Amit Sheth</b>, Founding Director, Artificial Intelligence Institute at University of South Carolina, USA</p>
           <p class="card-text ft">Title: Building trustworthy Neuro-symbolic AI systems with explainability and safety: Knowledge is the key</p>
-          <p class="card-text ft">Abstract:   TBD</p>
+          <p class="card-text ft">Abstract: </p>
   
       
         </div>
