--- a/nlp.html
+++ b/nlp.html
@@ -155,7 +155,7 @@ color: white;
 </div>
         
 <div class="container-fluid">
-        <h4><strong>International Workshop on “Natural Language Processing for Sustainability” (NLP4S 2023)</strong></h4>
+        <h4><strong>First International Workshop on “Natural Language Processing for Sustainability” (NLP4S 2023)</strong></h4>
         <h5><strong>Objective</strong></h5>
         <p>There are 17 Sustainable Development Goals (SDGs) towards which everyone in the world is committed. Artificial Intelligence (AI) can be a big support in achieving these goals. People in the world are interacting through various mediums about sustainability and also reacting to the events happening around it. So, a branch of AI, Natural Language Processing (NLP) can be a good tool to identify people’s reactions toward achieving these goals. Much of the research going around the globe is centered around NLP tools and techniques to extract valuable information. The objective of this workshop is to bring these researchers together and discuss the ideas presented by them, specifically in the domain of NLP and sustainable development.
 </p>
