--- a/speakers.html
+++ b/speakers.html
@@ -146,7 +146,17 @@ img {
 
         <p class="card-text ft"><b>Eleni Mangina</b>, Professor, University College Dublin, Computer Science, Dublin, Ireland</p>
         <p class="card-text ft">Title: - </p>
-        <p class="card-text ft">Abstract: TBD</p>
+        <p class="card-text ft">Abstract: "Data Analytics for Sustainable Global Supply Chains". In today’s modern, fast paced and globally connected world, Supply Chains have undoubtedly become a critical component of several business 
+operations and impact our lives every day. They are crucial to the functioning of almost all the industries and every product we use and consume 
+everyday including tooth pastes, cars, clothes, oil and electricity are products of a Supply Chain. The last century has seen rapid economic 
+liberalization and the opening up of new markets which has allowed companies to gain access to new markets and move their production and 
+other key economic activities to countries which offer reduced government regulation, low production costs, cheap skilled labour among other 
+factors which help it gain a competitive edge. This globalisation has led to the creation of a Global Supply Chain network which transcends borders 
+and this brings with it the challenges of efficiency and an increased time to market which are critical to the success of any Supply Chain.
+The aim of this presentation is to investigate data from the Road Freight Transport Operations in Europe, find patterns in logistic operations 
+and analyse them based on the efficiency in terms of the vehicle utilization or the degree of loading of vehicles during each journey and 
+sustainability in terms of amount of Carbon-dioxide emissions per journey. </p>
+            
 
     
       </div>
