--- a/speakers.html
+++ b/speakers.html
@@ -145,7 +145,7 @@ img {
       <div class="card-body">
 
         <p class="card-text ft"><b>Eleni Mangina</b>, Professor, University College Dublin, Computer Science, Dublin, Ireland</p>
-        <p class="card-text ft">Title: Data Analytics for Sustainable Global Supply Chains - </p>
+        <p class="card-text ft">Title: Data Analytics for Sustainable Global Supply Chains</p>
         <p class="card-text ft">Abstract: In today’s modern, fast paced and globally connected world, Supply Chains have undoubtedly become a critical component of several business 
 operations and impact our lives every day. They are crucial to the functioning of almost all the industries and every product we use and consume 
 everyday including tooth pastes, cars, clothes, oil and electricity are products of a Supply Chain. The last century has seen rapid economic 
