--- a/registration.html
+++ b/registration.html
@@ -200,7 +200,8 @@ th {
         </tr>
         <tr>
             <td>Workshop Authors</td>
-            <td>1500 INR</td>
+            <td>500 INR- Student/PhD Scholars</td>
+            <tr>1000 INR- Academicians/Industry</tr>
             <td>30$</td>
         </tr>
     </table>
