--- a/registration.html
+++ b/registration.html
@@ -200,9 +200,8 @@ th {
         </tr>
         <tr>
             <td>Workshop Authors</td>
-            <td>500 INR- Student/PhD Scholars</td>
-            <tr>1000 INR- Academicians/Industry</tr>
-            <td>30$</td>
+            <td>500 INR- Student/PhD Scholars; 1000 INR- Academicians/Industry </td>
+                        <td>30$</td>
         </tr>
     </table>
 
