--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@ color: white;
   The current choices to develop a sustainable-development-friendly AI by 2030 have the potential to unlock benefits that could go far-beyond the SDGs within our century.Categorization of the SDGs
    (<a href="https://www.un.org/sustainabledevelopment/">https://www.un.org/sustainabledevelopment/</a>)into the Society, Economy, and Environment groups.
 </p>
-
-
+<p class="text">
+      AI4S-2023 Proceedings download link: <a href="https://link.springer.com/book/10.1007/978-3-031-47997-7/">https://link.springer.com/book/10.1007/978-3-031-47997-7/</a>
+</p>
 <br>
 <br>
 
