--- a/cfp.html
+++ b/cfp.html
@@ -150,33 +150,75 @@ color: white;
 </div>
 <div class="container-fluid">
 
-    <h5 class="title"> <b>AI4S 2023</b></h5>
+    <h5 class="title"> <b>EGETC 2024</b></h5>
         <p class="text">
 
-            AI is not a silver bullet for all of humanity’s problems. But it has the potential to be a formidable tool in the toolkit. For that to happen. We invite you to submit original research on:
+          EGETC 2023 is an international gathering to bring researchers and governments into the ultimate developments and applications suitable for governments using Artificial Intelligence techniques, IoT, Big Data, and other emerging technologies. AI can play a crucial role in supporting the perpetual fight of the public sector to simplify processes or increase efficiency. The escalating demand for services that better answer changing user expectations of responsiveness and personalization, linked with higher expectations on the role of the government in the digital age, requires a technologically mature public sector.
+
+          The current wave of digital transformation in government can use AI to deliver services closer to users’ needs and preferences and thus have the potential to improve them. Specifically, the conference aims to advance both research and practice worldwide on cutting-edge technology to improve governance.
+          
 
 </p>
 
 <p class="text">
     Topics of interest include, but not limited to:
 </p>
-<p>Intelligent Agriculture</p>
-<p>Climate Risk Management</p>
-<p>Data-Driven Sustainable Finance</p>
-<p>Energy Savings Supported by ML</p>
-<p>Sustainable Smart Cities</p>
-<p>AI's Carbon Footprint</p>
-<p>Intelligently Control the HVAC-Energy Balance</p>
-<p>AI and Social Good</p>
-<p>Healthcare Efficiency</p>
-<p>Social and Environmental AI Impact on Urbanization</p>
-<p>Sustainable Digital Twins</p>
-<p>Trustworthy AI in Face Recognition</p>
-<p>Trustworthy AI in Health</p>
-<p>Trustworthy AI in Autonomous Driving</p>
-<p>Trustworthy AI in NLP</p>
-<p>Explainable AI Applied in Sustainable Development Goals</p>
 
+<p> Intelligent systems for coordination in crisis emergency management </p>
+<p> Distributed ledgers and Blockchains: governance, decentralized autonomous organizations (DAO)</p>
+<p>Machine Learning (ML), Artificial Intelligence (AI) and Big Data management for Public Sector</p>
+<p>Privacy, security and legal Informatics – AI and Law </p>
+<p>Open Data, Open Government Data: transparency, trust, public participation, co-creation and Open Innovation</p>
+<p>Digital transformation and Society 5.0</p>
+<p>Linked Data, Linked Open Data (LOD) </p>
+<p>Smart cities</p>
+<p>Semantic E-government applications</p>
+<p>Public Sector Knowledge Representation</p>
+<p>Knowledge Graphs</p>
+<p>Information Retrieval</p>
+<p>Decision Support Systems (DSS) in Digital Governance</p>
+<p>Deep Learning</p>
+<p>Natural Language Processing (NLP)</p>
+<p>Cloud Computing</p>
+<p>Bots, Automation agents, Self-learning systems</p>
+<p>Wearable devices</p>
+<p>Cybersecurity</p>
+<p>Cryptocurrencies and incentive mechanism design</p>
+<p>Multimedia and multilingual systems</p>
+
+<p class="text">
+  Target Audience
+
+This event is an excellent resource for AI scientists, computer scientists, researchers, higher education students, professors, and academicians and government officials.
+</p>
+<p class="text"></p>
+Submission Procedure
+
+Researchers and practitioners are invited to submit on or before May 30, 2022, a full paper according to Springer guidelines resources (Springer Guide).
+
+Note: There are no register, submission or acceptance fees for manuscripts submitted to this conference and book publication, all manuscripts are accepted based on a double-blind peer review editorial process.
+
+We solicit original research papers written in English. The submissions must not have been previously published or be under review for another conference or journal. Only complete and finished papers will be reviewed, not abstracts. Submitted papers (.pdf format) should follow the formatting guidelines. We reserve the right to reject without review the submissions that do not follow the format guidelines.
+
+All proposals should be submitted through the CMT
+
+TBD
+</p>
+
+<p class="text"></p>
+Publisher
+
+It is planned to publish the proceedings with Springer in their Communications in Computer and Information Science series (Approved by Springer)
+</p>
+
+<p class="text"></p>
+Important Dates
+</p>
+
+Submission Deadline May 30, 2023
+Notification Due June 30, 2023
+Final Version Due July 30, 2023
+Event September 11-12, 2023
 
 <br>
 <br>
